--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -5,12 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    	<style>
+
+            div{
+            background-color: blue;
+            border-style: solid;
+
+            }
+
+            .header{
+                font-size: 2rem;
+
+            }
+
+        </style>
+
+
+
 </head>
 <body>
-    <p> eins <div>
+    <div class="header"> eins </div>
     <p> zwei <div>
     <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, explicabo placeat ducimus eligendi veniam iste obcaecati vel sint sit impedit. Id accusantium quae dignissimos atque. <div>
-
+    <p> Hello</p>
 
 
 
