--- a/1.0.html
+++ b/1.0.html
@@ -18,16 +18,23 @@
 
             }
 
+
+            .subtitle{
+
+                font-size: 1.5rem;
+            }
+
         </style>
 
 
 
 </head>
 <body>
+    <div class="subtitle">subtitel </div>
     <div class="header"> eins </div>
-    <p> zwei <div>
-    <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, explicabo placeat ducimus eligendi veniam iste obcaecati vel sint sit impedit. Id accusantium quae dignissimos atque. <div>
-    <p> Hello</p>
+        <p> zwei <div>
+        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, explicabo placeat ducimus eligendi veniam iste obcaecati vel sint sit impedit. Id accusantium quae dignissimos atque. <div>
+        <p> Hello</p>
 
 
 
