--- a/HTML&CSS/Selectoren/Selectoren.html
+++ b/HTML&CSS/Selectoren/Selectoren.html
@@ -13,5 +13,23 @@
     <div id="Header"="font-size: 2rem;"> Heading</div>
     <div class="Subtitle">Subtitle</div>
     <div class="Subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus veniam sapiente incidunt explicabo culpa sit vel, aliquid recusandae soluta. Aliquam ducimus, recusandae eligendi obcaecati fugiat quos error laborum praesentium quibusdam?</div>
+    <div class="Subtitle" id="Kinder">
+        <p>eins</p>
+        <p>zwei</p>
+
+        <h1>Hallo</h1>
+
+
+    </div>
+
+
+    <div class="Weiteres" id="weiteres">
+
+        <p>subitlep</p>
+
+        
+
+
+    </div>
 </body>
 </html>
