--- a/HTML&CSS/ORF/ORF.html
+++ b/HTML&CSS/ORF/ORF.html
@@ -1,18 +1,71 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
-    <title>ORF</title>
-
-   <link rel="stylesheet" href="style.css">
-
- 
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 <body>
-    
+    <div class="header-one">
+        <div class="headerleft">
+            <ul class="headerlist">
+                <li id="ROW">Vorarlberg</li>
+                <li id="ROW">TVthek</li>
+                <li id="ROW">Radiothek</li>
+                <li id="ROW">Debatte und News</li>
+                <li id="ROW">Österreich</li>
+                <li id="ROW">Wetter</li>
+                <li id="ROW">Sport</li>
+                <li id="ROW">News  </li>
+            </ul>
+        </div>
+
+
+        <div class="headerright">
+            <p class="headerrighttext" id="text">www.Orf.at im Überblick</p>
+        </div>
+
+    </div>
+    <div class="logo">
+        <p class="logotext" id = "text">vorarlberg</p>
+        <img src="orf_logo.svg" height="30%" width="30%" id="image">
+    </div>
+    <div class="header-two">
+        <div class="header2left">
+
+        </div>
+        <div class="header2right">
+
+        </div>
+
+    </div>
+
+
+    <div class="main">
+        <div class="picture">
+            <img src="orf_b1.jpg" alt="">
+        </div>
+        <div class="information">
+            <div class="title" id="text">
+                <h5 class="Rona">Zur Corona Pandemie</h5>
+                <h1 class="titletext" id="text">19 neue Infektionen und ein Todesopfer</h1>
+            </div>
+            <div class="text" id="text">Mit dem Berichtstag 15.1. veränderte sich in Österreich die Summe der laborbestätigten Fälle um 1.015, die der Verstorbenen um 1 und die der genesenen Fälle um 2.966.
+                So verteilen sich die Fälle über die vergangenen Berichtstage:
+                Hinweis: Am 2.11.2022 wurde die Zählweise der Covid-19-Fälle auf den Normalstationen geändert. Es werden fortan nur noch aktive Fälle gezählt. Mehr dazu unter FAQ.
+
+                Hinweis: Seit Mitte Oktober melden nicht mehr alle Bundesländer an Wochenenden ihre Spitalszahlen ein.
+
+                Von erwachsenen Covid-19-Fällen belegte Normal- und Intensivbetten in durch die Landesgesundheitsfonds finanzierten Krankenanstalten sowie Unfallkrankenhäusern der AUVA, ergänzt durch die Auslastung der Nicht-Covid-19-Fälle auf den Intensivstationen. Für Wien ist die Anzahl der von Nicht-Covid-19-Fällen belegten Intensivbetten im Datensatz nicht verfügbar, deshalb kann diese Zahl auf Bundesebene nur ohne Wien angegeben werden. Auch die Anzahl der Nicht-Covid-19-Fälle auf den Normalstationen ist im Datensatz nicht enthalten. Durch verschiedene Berichtszeiten kann es für denselben Tag zu geringfügigen Unterschieden zu den Morgenmeldungen der Ministerien kommen.
+
+                Diese Grafik deckt nicht den gesamten Pandemiezeitraum ab. Für ältere Daten (allerdings ohne Nicht-Covid-19-Fälle) konsultieren Sie bitte die Verlaufsgrafiken zu Österreich bzw. den einzelnen Bundesländern und deaktivieren die Zahl der aktiven Fälle.
+
+.<div>
+        </div>
+    </div>
 </body>
 </html>
