--- a/Fussball-Website/Fussball-Website.html
+++ b/Fussball-Website/Fussball-Website.html
@@ -8,19 +8,27 @@
 </head>
 <body>
     <header>
-        <div class="logo">Dein Logo hier</div>
+        <div class="logo"></div>
         <nav>
             <ul>
                 <li><a href="#">Bundesliga Tabelle</a></li>
                 <li><a href="#">Torschützenkönig</a></li>
                 <li><a href="#">Spiele</a></li>
                 <li><a href="#">Information</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropbtn">Mehr</a>
+                    <div class="dropdown-content">
+                        <a href="#">Link 1</a>
+                        <a href="#">Link 2</a>
+                        <a href="#">Link 3</a>
+                    </div>
+                </li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <!-- Hier kommt der Inhalt deiner Website -->
+        
     </main>
 </body>
 </html>
