Fussball-Website-API-Über-uns-Update

--- a/Fussball-Website-API/ueber_uns.html
+++ b/Fussball-Website-API/ueber_uns.html
@@ -41,8 +41,8 @@
 
     <nav>
         <ul>
-            <li id="logo"><a href="#"><img src="fussball_rollt.gif" alt="Logo"></a></li>
-            <li><a href="index2.html">Home</a></li>
+            <li id="logo"><a href=""><img src="fussball_rollt.gif" alt="Logo"></a></li>
+            <li><a href="index.html">Home</a></li>
             <li class="mega-menu">
             <li><a href="https://www.servustv.com/sport/p/fussball/323/">Live-Übertragungen</a></li>
             <li class="mega-menu">
