--- a/Fussball-Website-API/index.html
+++ b/Fussball-Website-API/index.html
@@ -16,7 +16,7 @@
     
     <nav>
         <ul>
-            <li id="logo"><a href="#"><img src="fussball_rollt.gif" alt="Logo"></a></li>
+            <li id="logo"><a href="index.html"><img src="fussball_rollt.gif" alt="Logo"></a></li>
             <li><a href="index.html">Home</a></li>
             <li class="mega-menu">
             <li><a href="https://www.servustv.com/sport/p/fussball/323/">Live-Übertragungen</a></li>
